cmake_minimum_required(VERSION 3.10)
project(TinyChat LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
add_executable(server main.cpp)
find_package(Threads REQUIRED)
target_link_libraries(server Threads::Threads)
find_package(PkgConfig REQUIRED)
pkg_check_modules(HIREDIS REQUIRED hiredis)
target_include_directories(server PRIVATE ${HIREDIS_INCLUDE_DIRS})
target_link_libraries(server ${HIREDIS_LIBRARIES})
